[project]
name = "ugh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "plotly>=6.7.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
